@@ -1,3 +1,7 @@
+2018-09-16  Sam Varshavchik  <mrsam@courier-mta.com>
+
+	* Table layout manager, derived from the list layout manager.
+
 2018-09-09  Sam Varshavchik  <mrsam@courier-mta.com>
 
 	* Support updates of button's contents. button's get_layoutmanager()
